Check if user properties are picked up on maven build
git-svn-id: https://svn.apache.org/repos/asf/poi/trunk@1746901 13f79535-47bb-0310-9956-ffa450edef68